--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -42,3 +42,32 @@
 .skills__level {
   font-size: var(--tiny-font-size);
 }
+
+/*- - - - - - - - - - Breakpoints- - - - - - - - -*/
+/*- - - - - Lrg Devices - - - - - -*/
+@media screen and (max-width: 992px) {
+  .skills__container {
+    grid-template-columns: max-content;
+    row-gap: 2rem;
+  }
+}
+
+/*- - - - - Md Devices - - - - - -*/
+@media screen and (max-width: 576px) {
+  .skills_container {
+    grid-template-columns: 1fr;
+  }
+  .skills__content {
+    padding: 1.5rem;
+  }
+}
+
+/*- - - - - Sm Devices - - - - - -*/
+@media screen and (max-width: 350px) {
+  .skills__box {
+    column-gap: 1.25rem;
+  }
+  .skills__name {
+    font-size: var(--small-font-size);
+  }
+}
