--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -62,7 +62,7 @@
 .home__img {
   background: url(../../assets/profile.jpeg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   box-shadow: inset 0 0 0 5px rgb(255 255 255 / 30%);
   order: 1;
